Fix some layout issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,13 @@ html.dark {
     --faq-item-hover-bg: rgba(255, 255, 255, 0.1);
 }
 
+html {
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
+
 body {
     font-family: 'Nunito', sans-serif;
     background-color: var(--bg-color);
@@ -112,10 +119,6 @@ body {
     cursor: default;
     color: var(--text-color);
     transition: background-color 0.4s ease;
-    user-select: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
 }
 
 .theme-toggle {
